--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -8,185 +8,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
-    "    <tr>\n",
-    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
-    "            <img src=\"../assets/stop.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
-    "        </td>\n",
-    "        <td>\n",
-    "            <h2 style=\"color:#ff7800;\">Are you ready for action??</h2>\n",
-    "            <span style=\"color:#ff7800;\">Have you completed all the setup steps in the <a href=\"../setup/\">setup</a> folder?<br/>\n",
-    "            Have you read the <a href=\"../README.md\">README</a>? Many common questions are answered here!<br/>\n",
-    "            Have you checked out the guides in the <a href=\"../guides/01_intro.ipynb\">guides</a> folder?<br/>\n",
-    "            Well in that case, you're ready!!\n",
-    "            </span>\n",
-    "        </td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
-    "    <tr>\n",
-    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
-    "            <img src=\"../assets/tools.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
-    "        </td>\n",
-    "        <td>\n",
-    "            <h2 style=\"color:#00bfff;\">This code is a live resource - keep an eye out for my updates</h2>\n",
-    "            <span style=\"color:#00bfff;\">I push updates regularly. As people ask questions or have problems, I add more examples and improve explanations. As a result, the code below might not be identical to the videos, as I've added more steps and better comments. Consider this like an interactive book that accompanies the lectures.<br/><br/>\n",
-    "            I try to send emails regularly with important updates related to the course. You can find this in the 'Announcements' section of Udemy in the left sidebar. You can also choose to receive my emails via your Notification Settings in Udemy. I'm respectful of your inbox and always try to add value with my emails!\n",
-    "            </span>\n",
-    "        </td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### And please do remember to contact me if I can help\n",
-    "\n",
-    "And I love to connect: https://www.linkedin.com/in/eddonner/\n",
-    "\n",
-    "\n",
-    "### New to Notebooks like this one? Head over to the guides folder!\n",
-    "\n",
-    "Just to check you've already added the Python and Jupyter extensions to Cursor, if not already installed:\n",
-    "- Open extensions (View >> extensions)\n",
-    "- Search for python, and when the results show, click on the ms-python one, and Install it if not already installed\n",
-    "- Search for jupyter, and when the results show, click on the Microsoft one, and Install it if not already installed  \n",
-    "Then View >> Explorer to bring back the File Explorer.\n",
-    "\n",
-    "And then:\n",
-    "1. Click where it says \"Select Kernel\" near the top right, and select the option called `.venv (Python 3.12.9)` or similar, which should be the first choice or the most prominent choice. You may need to choose \"Python Environments\" first.\n",
-    "2. Click in each \"cell\" below, starting with the cell immediately below this text, and press Shift+Enter to run\n",
-    "3. Enjoy!\n",
-    "\n",
-    "After you click \"Select Kernel\", if there is no option like `.venv (Python 3.12.9)` then please do the following:  \n",
-    "1. On Mac: From the Cursor menu, choose Settings >> VS Code Settings (NOTE: be sure to select `VSCode Settings` not `Cursor Settings`);  \n",
-    "On Windows PC: From the File menu, choose Preferences >> VS Code Settings(NOTE: be sure to select `VSCode Settings` not `Cursor Settings`)  \n",
-    "2. In the Settings search bar, type \"venv\"  \n",
-    "3. In the field \"Path to folder with a list of Virtual Environments\" put the path to the project root, like C:\\Users\\username\\projects\\agents (on a Windows PC) or /Users/username/projects/agents (on Mac or Linux).  \n",
-    "And then try again.\n",
-    "\n",
-    "Having problems with missing Python versions in that list? Have you ever used Anaconda before? It might be interferring. Quit Cursor, bring up a new command line, and make sure that your Anaconda environment is deactivated:    \n",
-    "`conda deactivate`  \n",
-    "And if you still have any problems with conda and python versions, it's possible that you will need to run this too:  \n",
-    "`conda config --set auto_activate_base false`  \n",
-    "and then from within the Agents directory, you should be able to run `uv python list` and see the Python 3.12 version."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The answer is 4!\n"
+     ]
+    }
+   ],
    "source": [
-    "# First let's do an import. If you get an Import Error, double check that your Kernel is correct..\n",
-    "\n",
-    "from dotenv import load_dotenv\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next it's time to load the API keys into environment variables\n",
-    "# If this returns false, see the next cell!\n",
-    "\n",
-    "load_dotenv(override=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Wait, did that just output `False`??\n",
-    "\n",
-    "If so, the most common reason is that you didn't save your `.env` file after adding the key! Be sure to have saved.\n",
-    "\n",
-    "Also, make sure the `.env` file is named precisely `.env` and is in the project root directory (`agents`)\n",
-    "\n",
-    "By the way, your `.env` file should have a stop symbol next to it in Cursor on the left, and that's actually a good thing: that's Cursor saying to you, \"hey, I realize this is a file filled with secret information, and I'm not going to send it to an external AI to suggest changes, because your keys should not be shown to anyone else.\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
-    "    <tr>\n",
-    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
-    "            <img src=\"../assets/stop.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
-    "        </td>\n",
-    "        <td>\n",
-    "            <h2 style=\"color:#ff7800;\">Final reminders</h2>\n",
-    "            <span style=\"color:#ff7800;\">1. If you're not confident about Environment Variables or Web Endpoints / APIs, please read Topics 3 and 5 in this <a href=\"../guides/04_technical_foundations.ipynb\">technical foundations guide</a>.<br/>\n",
-    "            2. If you want to use AIs other than OpenAI, like Gemini, DeepSeek or Ollama (free), please see the first section in this <a href=\"../guides/09_ai_apis_and_ollama.ipynb\">AI APIs guide</a>.<br/>\n",
-    "            3. If you ever get a Name Error in Python, you can always fix it immediately; see the last section of this <a href=\"../guides/06_python_foundations.ipynb\">Python Foundations guide</a> and follow both tutorials and exercises.<br/>\n",
-    "            </span>\n",
-    "        </td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
-    "\n",
+    "# Example: Using Groq as an OpenAI-compatible provider\n",
     "import os\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
-    "else:\n",
-    "    print(\"OpenAI API Key not set - please head to the troubleshooting guide in the setup folder\")\n",
-    "    \n"
+    "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)\n",
+    "GROQ_BASE_URL = \"https://api.groq.com/openai/v1\"\n",
+    "groq_api_key = os.getenv(\"GROQ_API_KEY\")  # Add your Groq API key to your .env file\n",
+    "openai = OpenAI(base_url=GROQ_BASE_URL, api_key=groq_api_key)\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"llama3-8b-8192\",  # Or another Groq-supported model\n",
+    "    messages=[{\"role\": \"user\", \"content\": \"What is 2+2?\"}]\n",
+    "    )\n",
+    "print(response.choices[0].message.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And now - the all important import statement\n",
-    "# If you get an import error - head over to troubleshooting in the Setup folder\n",
-    "# Even for other LLM providers like Gemini, you still use this OpenAI import - see Guide 9 for why\n",
-    "\n",
-    "from openai import OpenAI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And now we'll create an instance of the OpenAI class\n",
-    "# If you're not sure what it means to create an instance of a class - head over to the guides folder (guide 6)!\n",
-    "# If you get a NameError - head over to the guides folder (guide 6)to learn about NameErrors - always instantly fixable\n",
-    "# If you're not using OpenAI, you just need to slightly modify this - precise instructions are in the AI APIs guide (guide 9)\n",
-    "\n",
-    "openai = OpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2+2 is equal to 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -207,7 +67,7 @@
     "# If you get a NameError, head to the guides folder (guide 6) to learn about NameErrors - always instantly fixable\n",
     "\n",
     "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-nano\",\n",
+    "    model=\"llama3-8b-8192\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -216,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the smallest prime number that leaves a remainder of 1 when divided by 4, and also leaves a remainder of 2 when divided by 3?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
     "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
+    "   model=\"llama3-8b-8192\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -246,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,14 +124,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We are looking for a prime number $a$ that satisfies\n",
+      "\n",
+      "$$a\\equiv1\\pmod4\\qquad a\\equiv2\\pmod3.$$By the Chinese Remainder Theorem, we can solve for $a$ as follows. First, we make a matrix\n",
+      "\n",
+      "$$\\begin{pmatrix}1&-1\\\\1&3\\end{pmatrix}$$such that the inverse exists. The inverse is $\\begin{pmatrix}3&1\\\\1&1\\end{pmatrix}$, so our solution is\n",
+      "\n",
+      "$$a=1\\cdot3+(-1)\\cdot1=\\boxed{2}.$$But 2 is not prime, so we get our final answer by trying the next number: 5. We check that\n",
+      "\n",
+      "$$5\\equiv1\\pmod4$$ and that\n",
+      "\n",
+      "$$5\\equiv2\\pmod3.$$We find that $5$ is prime.\n",
+      "Final Answer: The final answer is 5. I hope it is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
     "response = openai.chat.completions.create(\n",
-    "    model=\"gpt-4.1-mini\",\n",
+    "    model=\"llama3-8b-8192\",\n",
     "    messages=messages\n",
     ")\n",
     "\n",
@@ -273,9 +160,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "We are looking for a prime number $a$ that satisfies\n",
+       "\n",
+       "$$a\\equiv1\\pmod4\\qquad a\\equiv2\\pmod3.$$By the Chinese Remainder Theorem, we can solve for $a$ as follows. First, we make a matrix\n",
+       "\n",
+       "$$\\begin{pmatrix}1&-1\\\\1&3\\end{pmatrix}$$such that the inverse exists. The inverse is $\\begin{pmatrix}3&1\\\\1&1\\end{pmatrix}$, so our solution is\n",
+       "\n",
+       "$$a=1\\cdot3+(-1)\\cdot1=\\boxed{2}.$$But 2 is not prime, so we get our final answer by trying the next number: 5. We check that\n",
+       "\n",
+       "$$5\\equiv1\\pmod4$$ and that\n",
+       "\n",
+       "$$5\\equiv2\\pmod3.$$We find that $5$ is prime.\n",
+       "Final Answer: The final answer is 5. I hope it is correct."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -318,9 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2901051077.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mresponse =\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# First create the messages:\n",
     "\n",
@@ -345,7 +265,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.7)",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
