--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -9,189 +9,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The answer is 4!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# %pip install beautifulsoup4\n",
+    "\n",
     "# Example: Using Groq as an OpenAI-compatible provider\n",
     "import os\n",
+    "import json\n",
+    "import requests\n",
+    "import gradio as gr\n",
+    "from bs4 import BeautifulSoup\n",
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)\n",
     "GROQ_BASE_URL = \"https://api.groq.com/openai/v1\"\n",
     "groq_api_key = os.getenv(\"GROQ_API_KEY\")  # Add your Groq API key to your .env file\n",
     "openai = OpenAI(base_url=GROQ_BASE_URL, api_key=groq_api_key)\n",
+    "system_prompt = [{\"role\": \"system\", \"content\": \"\"\"\n",
+    "                  You are a helpful assistant. First ask for the link to continue chat. If they don't provide them ask it again and again.\n",
+    "                  If link is not provided ask it again calmly.\n",
+    "                  Once the link is provided and tool it called, answers further question from the content.\"\"\"},]\n",
+    "messages = system_prompt\n",
     "response = openai.chat.completions.create(\n",
     "    model=\"llama3-8b-8192\",  # Or another Groq-supported model\n",
-    "    messages=[{\"role\": \"user\", \"content\": \"What is 2+2?\"}]\n",
-    "    )\n",
-    "print(response.choices[0].message.content)"
+    "    messages=messages\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a list of messages in the familiar OpenAI format\n",
-    "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"What is 2+2?\"}]"
+    "def get_page_link(link):\n",
+    "    print(f\"Getting page link for args: {link}\", flush=True)  \n",
+    "    response = requests.get(link)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    \n",
+    "        # Extract only readable text\n",
+    "        text = \" \".join(soup.stripped_strings)\n",
+    "        return text[:3000]\n",
+    "    else:\n",
+    "        return f\"Failed to retrieve page. Status code: {response.status_code}\"  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2+2 is equal to 4.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# And now call it! Any problems, head to the troubleshooting guide\n",
-    "# This uses GPT 4.1 nano, the incredibly cheap model\n",
-    "# The APIs guide (guide 9) has exact instructions for using even cheaper or free alternatives to OpenAI\n",
-    "# If you get a NameError, head to the guides folder (guide 6) to learn about NameErrors - always instantly fixable\n",
-    "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"llama3-8b-8192\",\n",
-    "    messages=messages\n",
-    ")\n",
-    "\n",
-    "print(response.choices[0].message.content)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# And now - let's ask for a question:\n",
-    "\n",
-    "question = \"Please propose a hard, challenging question to assess someone's IQ. Respond only with the question.\"\n",
-    "messages = [{\"role\": \"user\", \"content\": question}]\n"
+    "def handle_tool_calls(tool_calls):\n",
+    "    results = []\n",
+    "    for tool_call in tool_calls:\n",
+    "        tool_name = tool_call.function.name\n",
+    "        arguments = json.loads(tool_call.function.arguments)\n",
+    "        print(f\"Tool called: {tool_name}\", flush=True)\n",
+    "        print(f\"Arguments: {arguments}\", flush=True)\n",
+    "        tool = globals().get(tool_name)\n",
+    "        print(f\"Tool: {tool}\", flush=True)\n",
+    "        \n",
+    "        result = tool(**arguments) if tool else {}\n",
+    "        results.append({\"role\": \"tool\",\"content\": json.dumps(result),\"tool_call_id\": tool_call.id})\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is the smallest prime number that leaves a remainder of 1 when divided by 4, and also leaves a remainder of 2 when divided by 3?\n"
-     ]
-    }
-   ],
-   "source": [
-    "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
-    "\n",
-    "response = openai.chat.completions.create(\n",
-    "   model=\"llama3-8b-8192\",\n",
-    "    messages=messages\n",
-    ")\n",
-    "\n",
-    "question = response.choices[0].message.content\n",
-    "\n",
-    "print(question)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# form a new messages list\n",
-    "messages = [{\"role\": \"user\", \"content\": question}]\n"
+    "get_page_link_json = {\n",
+    "    \"name\": \"get_page_link\",\n",
+    "    \"description\": \"Always use this function when get the link asked first\",\n",
+    "    \"parameters\": {\n",
+    "        \"type\": \"object\",\n",
+    "        \"properties\": {\n",
+    "            \"link\": {\n",
+    "                \"type\": \"string\",\n",
+    "                \"description\": \"Link to the page\",\n",
+    "            },\n",
+    "        },\n",
+    "        \"required\": [\"link\"],\n",
+    "        \"additionalProperties\": False\n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We are looking for a prime number $a$ that satisfies\n",
-      "\n",
-      "$$a\\equiv1\\pmod4\\qquad a\\equiv2\\pmod3.$$By the Chinese Remainder Theorem, we can solve for $a$ as follows. First, we make a matrix\n",
-      "\n",
-      "$$\\begin{pmatrix}1&-1\\\\1&3\\end{pmatrix}$$such that the inverse exists. The inverse is $\\begin{pmatrix}3&1\\\\1&1\\end{pmatrix}$, so our solution is\n",
-      "\n",
-      "$$a=1\\cdot3+(-1)\\cdot1=\\boxed{2}.$$But 2 is not prime, so we get our final answer by trying the next number: 5. We check that\n",
-      "\n",
-      "$$5\\equiv1\\pmod4$$ and that\n",
-      "\n",
-      "$$5\\equiv2\\pmod3.$$We find that $5$ is prime.\n",
-      "Final Answer: The final answer is 5. I hope it is correct.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Ask it again\n",
-    "\n",
-    "response = openai.chat.completions.create(\n",
-    "    model=\"llama3-8b-8192\",\n",
-    "    messages=messages\n",
-    ")\n",
-    "\n",
-    "answer = response.choices[0].message.content\n",
-    "print(answer)\n"
+    "tools = [{\"type\": \"function\", \"function\": get_page_link_json}]\n",
+    "print(messages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "We are looking for a prime number $a$ that satisfies\n",
-       "\n",
-       "$$a\\equiv1\\pmod4\\qquad a\\equiv2\\pmod3.$$By the Chinese Remainder Theorem, we can solve for $a$ as follows. First, we make a matrix\n",
-       "\n",
-       "$$\\begin{pmatrix}1&-1\\\\1&3\\end{pmatrix}$$such that the inverse exists. The inverse is $\\begin{pmatrix}3&1\\\\1&1\\end{pmatrix}$, so our solution is\n",
-       "\n",
-       "$$a=1\\cdot3+(-1)\\cdot1=\\boxed{2}.$$But 2 is not prime, so we get our final answer by trying the next number: 5. We check that\n",
-       "\n",
-       "$$5\\equiv1\\pmod4$$ and that\n",
-       "\n",
-       "$$5\\equiv2\\pmod3.$$We find that $5$ is prime.\n",
-       "Final Answer: The final answer is 5. I hope it is correct."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from IPython.display import Markdown, display\n",
+    "def chat(message, history):\n",
+    "    history = [{\"role\": h[\"role\"], \"content\": h[\"content\"]} for h in history]\n",
+    "    messages = system_prompt + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "    done = False\n",
+    "    while not done:\n",
     "\n",
-    "display(Markdown(answer))\n",
-    "\n"
+    "        # This is the call to the LLM - see that we pass in the tools json\n",
+    "\n",
+    "        response = openai.chat.completions.create(model=\"llama3-8b-8192\", messages=messages, tools=tools)\n",
+    "\n",
+    "        finish_reason = response.choices[0].finish_reason\n",
+    "        print(f\"Finish reason: {finish_reason}\")\n",
+    "        # If the LLM wants to call a tool, we do that!\n",
+    "         \n",
+    "        if finish_reason==\"tool_calls\":\n",
+    "            message = response.choices[0].message\n",
+    "            print(f\"message: {message}\", flush=True)\n",
+    "            \n",
+    "            tool_calls = message.tool_calls\n",
+    "            results = handle_tool_calls(tool_calls)\n",
+    "            print(f\"Tool results: {results}\", flush=True)\n",
+    "            messages.append(message)\n",
+    "            messages.extend(results)\n",
+    "        else:\n",
+    "            done = True\n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
   },
   {
