--- a/6_mcp/1_lab1.ipynb
+++ b/6_mcp/1_lab1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,97 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv(override=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Let's use MCP in OpenAI Agents SDK\n",
+    "load_dotenv(override=True)\n",
+    "from dotenv import load_dotenv\n",
+    "from agents import Agent, Runner, trace, function_tool, OpenAIChatCompletionsModel\n",
+    "import os\n",
+    "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
+    "from openai import AsyncOpenAI\n",
+    "load_dotenv(override=True)\n",
     "\n",
-    "1. Create a Client\n",
+    "MODEL = 'llama-3.3-70b-versatile'\n",
+    "GROQ_BASE_URL = \"https://api.groq.com/openai/v1\"\n",
+    "groq_api_key = os.getenv(\"GROQ_API_KEY\")  # Add your Groq API key to your .env file\n",
     "\n",
-    "2. Have it spawn a server\n",
+    "# Point OpenAI client to Groq endpoint\n",
+    "groq_client = AsyncOpenAI(\n",
+    "    api_key=groq_api_key,\n",
+    "    base_url=GROQ_BASE_URL\n",
+    ")\n",
     "\n",
-    "3. Collect the tools that the server can use\n",
-    "\n",
-    "Let's try the Fetch mcp-server that we looked at last week\n",
-    "\n",
-    "### Special note - in case you updated the OpenAI Agents framework:\n",
-    "\n",
-    "OpenAI Agents SDK recently upgraded their SDK and made a breaking change (thank you, OpenAI 😂). I haven't yet updated the version in this repo to the latest version. If you've upgraded the package yourself, then you might get an error about missing positional arguments. If you get that error, you'll need to replace `await server.list_tools()` with `await server.session.list_tools()` and change the last line from `fetch_tools` to `fetch_tools.tools`. And you'll need to make this change every time you get this error! The joys of working at the bleeding edge.."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fetch_params = {\"command\": \"uvx\", \"args\": [\"mcp-server-fetch\"]}\n",
-    "\n",
-    "async with MCPServerStdio(params=fetch_params, client_session_timeout_seconds=60) as server:\n",
-    "    fetch_tools = await server.list_tools()\n",
-    "\n",
-    "fetch_tools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extra installation step - if you don't have Node and Playwright on your computer\n",
-    "\n",
-    "The next MCP tool uses node (the Javascript Server), and it needs you to have the command 'npx' installed on your computer.\n",
-    "\n",
-    "Extra setup steps are here:\n",
-    "\n",
-    "[Node and Playwright setup](../setup/SETUP-node.md)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## And now 2 more MCP servers - this time Javascript based, with node\n",
-    "\n",
-    "### If the next cell hangs, see the important troubleshooting at the end of the SETUP-node instructions linked above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "playwright_params = {\"command\": \"npx\",\"args\": [ \"@playwright/mcp@latest\"]}\n",
-    "\n",
-    "async with MCPServerStdio(params=playwright_params, client_session_timeout_seconds=60) as server:\n",
-    "    playwright_tools = await server.list_tools()\n",
-    "\n",
-    "playwright_tools\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "sandbox_path = os.path.abspath(os.path.join(os.getcwd(), \"sandbox\"))\n",
-    "files_params = {\"command\": \"npx\", \"args\": [\"-y\", \"@modelcontextprotocol/server-filesystem\", sandbox_path]}\n",
-    "\n",
-    "async with MCPServerStdio(params=files_params,client_session_timeout_seconds=60) as server:\n",
-    "    file_tools = await server.list_tools()\n",
-    "\n",
-    "file_tools"
+    "groq_model = OpenAIChatCompletionsModel(model=MODEL, openai_client=groq_client)\n"
    ]
   },
   {
@@ -158,30 +90,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/shivang.gupta/Documents/GitHub/agents/6_mcp/sandbox\n",
+      "The function calls were executed successfully. Here is the recipe for banoffee, summarized in markdown and written to the file banoffee.md:\n",
+      "\n",
+      "# Banoffee Recipe\n",
+      "## Ingredients:\n",
+      "* 1 cup granulated sugar\n",
+      "* 1/2 cup light brown soft sugar\n",
+      "* 1/2 cup all-purpose flour\n",
+      "* 1/2 teaspoon baking powder\n",
+      "* 1/4 teaspoon salt\n",
+      "* 1/2 cup unsalted butter, melted\n",
+      "* 2 large eggs\n",
+      "* 2 teaspoons pure vanilla extract\n",
+      "* 1 cup heavy cream\n",
+      "* 1 cup sliced bananas\n",
+      "* 1 cup toffee bits\n",
+      "* 1 cup chopped walnuts (optional)\n",
+      "\n",
+      "## Instructions:\n",
+      "1. Preheat oven to 350°F (180°C).\n",
+      "2. Line an 8-inch round cake pan with parchment paper.\n",
+      "3. In a medium bowl, whisk together flour, baking powder, and salt.\n",
+      "4. In a large bowl, use an electric mixer to beat together sugars and melted butter until well combined.\n",
+      "5. Beat in eggs one at a time, followed by vanilla extract.\n",
+      "6. Gradually mix in the flour mixture, then stir in heavy cream.\n",
+      "7. Fold in sliced bananas, toffee bits, and chopped walnuts (if using).\n",
+      "8. Pour batter into prepared cake pan and smooth top.\n",
+      "9. Bake for 35-40 minutes or until a toothpick inserted into the center comes out clean.\n",
+      "10. Remove from oven and let cool in pan for 10 minutes, then transfer to a wire rack to cool completely.\n"
+     ]
+    }
+   ],
    "source": [
     "instructions = \"\"\"\n",
     "You browse the internet to accomplish your instructions.\n",
     "You are highly capable at browsing the internet independently to accomplish your task, \n",
-    "including accepting all cookies and clicking 'not now' as\n",
-    "appropriate to get to the content you need. If one website isn't fruitful, try another. \n",
-    "Be persistent until you have solved your assignment,\n",
-    "trying different options and sites as needed.\n",
+    "including accepting all cookies\n",
     "\"\"\"\n",
     "\n",
+    "sandbox_path = os.path.abspath(os.path.join(os.getcwd(), \"sandbox\"))\n",
+    "print(sandbox_path)\n",
+    "files_params = {\"command\": \"npx\", \"args\": [\"-y\", \"@modelcontextprotocol/server-filesystem\", sandbox_path]}\n",
+    "playwright_params = {\"command\": \"uvx\",\"args\": [ \"mcp-server-browser\"]}\n",
     "\n",
-    "async with MCPServerStdio(params=files_params, client_session_timeout_seconds=60) as mcp_server_files:\n",
-    "    async with MCPServerStdio(params=playwright_params, client_session_timeout_seconds=60) as mcp_server_browser:\n",
+    "async with MCPServerStdio(params=files_params, client_session_timeout_seconds=600) as mcp_server_files:\n",
+    "    async with MCPServerStdio(params=playwright_params, client_session_timeout_seconds=600) as mcp_server_browser:\n",
     "        agent = Agent(\n",
     "            name=\"investigator\", \n",
     "            instructions=instructions, \n",
-    "            model=\"gpt-4.1-mini\",\n",
+    "            model=groq_model,\n",
     "            mcp_servers=[mcp_server_files, mcp_server_browser]\n",
     "            )\n",
     "        with trace(\"investigate\"):\n",
-    "            result = await Runner.run(agent, \"Find a great recipe for Banoffee Pie, then summarize it in markdown to banoffee.md\")\n",
+    "            result = await Runner.run(agent, \"Get the recipe for banoffee, then summarize it in markdown to banoffee.md\")\n",
     "            print(result.final_output)\n"
    ]
   },
@@ -218,7 +187,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.7)",
    "language": "python",
    "name": "python3"
   },
@@ -232,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
