--- a/5_autogen/1_lab1_autogen_agentchat.ipynb
+++ b/5_autogen/1_lab1_autogen_agentchat.ipynb
@@ -13,9 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv(override=True)"
@@ -29,11 +40,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: autogen-ext in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (0.7.4)\n",
+      "Requirement already satisfied: autogen_agentchat in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (0.7.4)\n",
+      "Requirement already satisfied: autogen_core in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (0.7.4)\n",
+      "Requirement already satisfied: jsonref~=1.1.0 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from autogen_core) (1.1.0)\n",
+      "Requirement already satisfied: opentelemetry-api>=1.34.1 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from autogen_core) (1.36.0)\n",
+      "Requirement already satisfied: pillow>=11.0.0 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from autogen_core) (11.3.0)\n",
+      "Requirement already satisfied: protobuf~=5.29.3 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from autogen_core) (5.29.5)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.10.0 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from autogen_core) (2.11.7)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.0 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from autogen_core) (4.15.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.10.0->autogen_core) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.10.0->autogen_core) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.10.0->autogen_core) (0.4.1)\n",
+      "Requirement already satisfied: importlib-metadata<8.8.0,>=6.0 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from opentelemetry-api>=1.34.1->autogen_core) (8.7.0)\n",
+      "Requirement already satisfied: zipp>=3.20 in /Users/shivang.gupta/Documents/GitHub/agents/.venv/lib/python3.12/site-packages (from importlib-metadata<8.8.0,>=6.0->opentelemetry-api>=1.34.1->autogen_core) (3.23.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tiktoken'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mpip\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33minstall autogen-ext autogen_agentchat autogen_core\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mautogen_ext\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodels\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mopenai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OpenAIChatCompletionClient\n\u001b[32m      4\u001b[39m model_client = OpenAIChatCompletionClient(model=\u001b[33m\"\u001b[39m\u001b[33mgpt-4o-mini\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/agents/.venv/lib/python3.12/site-packages/autogen_ext/models/openai/__init__.py:2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m _message_transform\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_openai_client\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      3\u001b[39m     AZURE_OPENAI_USER_AGENT,\n\u001b[32m      4\u001b[39m     AzureOpenAIChatCompletionClient,\n\u001b[32m      5\u001b[39m     BaseOpenAIChatCompletionClient,\n\u001b[32m      6\u001b[39m     OpenAIChatCompletionClient,\n\u001b[32m      7\u001b[39m )\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m      9\u001b[39m     AzureOpenAIClientConfigurationConfigModel,\n\u001b[32m     10\u001b[39m     BaseOpenAIClientConfigurationConfigModel,\n\u001b[32m     11\u001b[39m     CreateArgumentsConfigModel,\n\u001b[32m     12\u001b[39m     OpenAIClientConfigurationConfigModel,\n\u001b[32m     13\u001b[39m )\n\u001b[32m     15\u001b[39m __all__ = [\n\u001b[32m     16\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mOpenAIChatCompletionClient\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     17\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mAzureOpenAIChatCompletionClient\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     24\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m_message_transform\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     25\u001b[39m ]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/agents/.venv/lib/python3.12/site-packages/autogen_ext/models/openai/_openai_client.py:28\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mimportlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetadata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PackageNotFoundError, version\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     13\u001b[39m     Any,\n\u001b[32m     14\u001b[39m     AsyncGenerator,\n\u001b[32m   (...)\u001b[39m\u001b[32m     25\u001b[39m     cast,\n\u001b[32m     26\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtiktoken\u001b[39;00m\n\u001b[32m     29\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mautogen_core\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     30\u001b[39m     EVENT_LOGGER_NAME,\n\u001b[32m     31\u001b[39m     TRACE_LOGGER_NAME,\n\u001b[32m   (...)\u001b[39m\u001b[32m     35\u001b[39m     Image,\n\u001b[32m     36\u001b[39m )\n\u001b[32m     37\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mautogen_core\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlogging\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LLMCallEvent, LLMStreamEndEvent, LLMStreamStartEvent\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'tiktoken'"
+     ]
+    }
+   ],
    "source": [
+    "# %pip install autogen-ext autogen_agentchat autogen_core\n",
+    "\n",
     "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
     "model_client = OpenAIChatCompletionClient(model=\"gpt-4o-mini\")"
    ]
@@ -225,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.7)",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
